<resources>
    <string name="cantata_app_name">大合唱</string>
    <string name="cantata_join">加入</string>
    <string name="cantata_score">评分</string>
    <string name="cantata_loading">加载中…</string>
    <string name="cantata_create_room">创建房间</string>
    <string name="cantata_room_title">房间标题</string>
    <string name="cantata_room_name_hint">填写房间名称，吸引更多观众</string>
    <string name="cantata_random">随机</string>
    <string name="cantata_room_is_encryption">房间是否加密</string>
    <string name="cantata_open">公开</string>
    <string name="cantata_encryption">加密</string>
    <string name="cantata_please_input_4_pwd">请设置4位数房间密码</string>
    <string name="cantata_enter_room_tips">网络不佳, 请重试</string>
    <string name="cantata_room_pwd">房间加密</string>
    <string name="cantata_create_room_tips">本应用为测试产品，仅用于功能体验，请勿商用。单次使用时长不超过20分钟，过时房问将自动解散。为配合相关部门监管要求，严禁色情、辱骂、暴恐、涉政等违规内容。警惕电信诈骗，请勿在使用过程中进行货款申请和网银转账！国家反诈专用号码：96110</string>
    <string name="cantata_net_status_good">本机网络好</string>
    <string name="cantata_net_status_m">本机网络良</string>
    <string name="cantata_net_status_low">本机网络差</string>
    <string name="cantata_net_status_un_know">本机网络未知</string>
    <string name="cantata_please_input_room_name">请输入房间名称</string>
    <string name="cantata_empty_search">未找到相关结果</string>
    <string name="cantata_song_and_singer" translatable="false">%s - %s</string>
    <string name="cantata_please_use_headset">请插入耳机使用耳返功能</string>
    <string name="cantata_input_remote_volume">请输入0到100的正整数</string>
    <string name="cantata_mv">MV</string>
    <string name="cantata_song_background">歌词背景</string>
    <string name="cantata_more_actions">更多操作</string>
    <string name="cantata_create">创建</string>
    <string name="cantata_create_tips1">欢迎来到大合唱房，\n美声音效、歌词同步、打分等九大场景轻松还\n原线下K歌体验，超高音质，以歌会友，一起\n来体验吧！</string>
    <string name="cantata_create_tips2">本应用为测试产品，请勿商用</string>
    <string name="cantata_create_tips3">单次K歌最长20分钟，每个房间最多8人</string>
    <string name="cantata_room_before_speaker">点击空麦位，上麦后可点歌与发言</string>
    <string name="cantata_room_owner">房主</string>
    <string name="cantata_room_sing1">演唱中</string>
    <string name="cantata_room_sing1_1">合唱中</string>
    <string name="cantata_room_original">原唱</string>
    <string name="cantata_room_change_song">切歌</string>
    <string name="cantata_room_seat_off">下麦</string>
    <string name="cantata_room_player_pause">暂停</string>
    <string name="cantata_room_player_play">播放</string>
    <string name="cantata_room_player_tweak">调音</string>
    <string name="cantata_room_choose_song">点歌</string>
    <string name="cantata_room_chosen_song_list">已点</string>
    <string name="cantata_room_choose_song_loading">加载中</string>
    <string name="cantata_room_sing2">演唱中</string>
    <string name="cantata_room_no_sing">当前无人点歌，\n快选择歌曲一起合唱吧</string>
    <string name="cantata_dialog_migu_tip" />
    <string name="cantata_dialog_music_list_empty">未找到相关搜索结果</string>
    <string name="cantata_dialog_music_list_search_hint">搜索歌曲</string>
    <string name="cantata_lrc_loading">歌曲准备中</string>
    <string name="cantata_lrc_load_fail">加载失败</string>
    <string name="cantata_room_change_music_title">切歌</string>
    <string name="cantata_room_change_music_msg">终止当前歌曲的演唱？</string>
    <string name="cantata_room_time_wait_join_chorus">等待加入合唱</string>
    <string name="cantata_room_time_join_chorus_">抢麦倒计时</string>
    <string name="cantata_music_join_chorus">加入合唱</string>
    <string name="cantata_music_chorus_start_now">不等了，独唱</string>
    <string name="cantata_use_overtime">试用时间已到</string>
    <string name="cantata_need_up">请先上坐</string>
    <string name="cantata_error_cut">该歌曲无法进行人声切换</string>
    <string name="cantata_join_error">加入房间失败</string>
    <string name="cantata_sync_music_error">同步歌曲失败</string>
    <string name="cantata_leave_title">关闭歌房</string>
    <string name="cantata_leave_msg">关闭歌房后所有成员将被移除房间</string>
    <string name="cantata_music_menu_dialog_title">控制台</string>
    <string name="cantata_music_menu_dialog_ear">耳返设置</string>
    <string name="cantata_music_menu_dialog_tone">升降调</string>
    <string name="cantata_music_menu_dialog_vol1">人声音量</string>
    <string name="cantata_music_menu_dialog_remote_volume">远端音量</string>
    <string name="cantata_music_menu_dialog_vol2">伴奏音量</string>
    <string name="cantata_music_menu_dialog_effect">效果</string>
    <string name="cantata_song_rank_1">热歌榜</string>
    <string name="cantata_song_rank_2">嗨唱推荐</string>
    <string name="cantata_song_rank_3">抖音热歌</string>
    <string name="cantata_song_rank_4">古风热歌</string>
    <string name="cantata_song_rank_5">KTV必唱</string>
    <string name="cantata_song_rank_6">新歌榜</string>
    <string name="cantata_song_rank_7">热门新歌</string>
    <string name="cantata_song_search_place_holder">搜索歌曲、歌手</string>
    <string name="cantata_song_effect_1">空间塑造</string>
    <string name="cantata_song_effect_2">曲风音效</string>
    <string name="cantata_song_effect_3">电音音效</string>
    <string name="cantata_song_effect_4">更多音效</string>
    <string name="cantata_start_electric_sound">启动电音</string>
    <string name="cantata_select_mode">选择调式</string>
    <string name="cantata_gentle_wind">和风</string>
    <string name="cantata_minor">小调</string>
    <string name="cantata_major">大调</string>
    <string name="cantata_select_starting_scale">选择起始音阶</string>
    <string name="cantata_effect_a">A</string>
    <string name="cantata_effect_a_2">A#</string>
    <string name="cantata_effect_b">B</string>
    <string name="cantata_effect_c">C</string>
    <string name="cantata_effect_c_2">C#</string>
    <string name="cantata_effect_d">D</string>
    <string name="cantata_effect_d_2">D#</string>
    <string name="cantata_effect_e">E</string>
    <string name="cantata_effect_f">F</string>
    <string name="cantata_effect_f_2">F#</string>
    <string name="cantata_effect_g">G</string>
    <string name="cantata_effect_g_2">G#</string>
    <string name="cantata_def_nothing">默认无</string>
    <string name="cantata_room_big_man">大房间(男)</string>
    <string name="cantata_room_small_man">小房间(男)</string>
    <string name="cantata_room_big_woman">大房间(女)</string>
    <string name="cantata_room_small_woman">小房间(女)</string>
    <string name="cantata_your_score">你的得分</string>
    <string name="cantata_room_count">%d在线</string>
    <string name="cantata_zc">主唱</string>
    <string name="cantata_hc">合唱</string>
    <string name="cantata_song_ordering_person">点唱：</string>
    <string name="cantata_song_ordering_person_chorus">合唱：</string>
    <string name="cantata_people">人</string>
    <string name="cantata_music_menu_dialog_mv">MV</string>
    <string name="cantata_score_formatter">%s 总分</string>
    <string name="cantata_beauty_voice">美声</string>
    <string name="cantata_voice_effect">音效</string>
    <string name="cantata_camera">摄像头</string>
    <string name="cantata_leave_chorus">退出合唱</string>
    <string name="cantata_people_count">%d人</string>
    <string name="cantata_toggle_mic">麦克风启用或静音</string>
    <string name="cantata_choose_cover">选择你喜欢的歌曲封面</string>
    <string name="cantata_chorus">合唱</string>
    <string name="cantata_order_song">点歌</string>
    <string name="cantata_random_room_name">随机生成一个房间名称</string>
    <string name="cantata_tone_down">点击调低音调</string>
    <string name="cantata_tone_up">点击调高音调</string>
    <string name="cantata_remote_volume_down">点击调低远端音量</string>
    <string name="cantata_remote_volume_up">点击调高远端音量</string>
    <string name="cantata_ok">好的</string>
    <string name="cantata_done">完成</string>
    <string name="cantata_search">搜索</string>
    <string name="cantata_confirm">确定</string>
    <string name="cantata_cancel">取消</string>
    <string name="cantata_error_permission">需要相应权限，请打开</string>
    <string name="cantata_room_list_title">歌房</string>
    <string name="cantata_room_list_empty">请创建一个歌房</string>
    <string name="cantata_create_room_name_label">歌房名称</string>
    <string name="cantata_create_room_name_label2">本应用为测试产品，请勿商用。单次直播最长10分钟，每个频道最多10人。</string>
    <string name="cantata_create_button">创建</string>
    <string name="cantata_dialog_join_msg">准备中，请等待…</string>
    <string name="cantata_permission_alert">缺少运行所需的必要权限，是否确认申请？</string>
    <string name="cantata_permission_refused">运行此功能需要的必要权限未被授予。</string>
    <string name="cantata_network_unavailable">未检测到可用网络，确认继续？</string>
    <string name="cantata_no_lrc">暂无歌词 </string>
    <string name="cantata_content">监测到当前内容存在违规行为</string>
    <string name="cantata_iknow">我知道了</string>
    <string name="cantata_skip_prelude">跳过前奏</string>
    <string name="cantata_skip_postlude">跳过尾奏</string>
    <string name="cantata_onseat_toast">加入合唱前，您需要先上麦</string>
    <string name="cantata_load_failed_no_song">"加载失败，当前已无歌曲"</string>
    <string name="cantata_load_failed">歌曲加载失败</string>
    <string name="cantata_try">已尝试三次，请自动切歌</string>
    <string name="cantata_load_failed_another_song">"加载失败，当前已切换到另一首歌"</string>
    <string name="cantata_too_fast">操作太频繁</string>
    <string name="cantata_lrc_failed">歌词加载失败</string>
    <string name="cantata_retry">点击重试</string>
    <string name="cantata_join_chorus_failed">加入合唱失败</string>
    <string name="cantata_earback_title">耳返</string>
    <string name="cantata_earback_mode">耳返模式</string>
    <string name="cantata_earback_switch">耳返开关</string>
    <string name="cantata_earback_setting">耳返设置</string>
    <string name="cantata_earback_volume">耳返音量</string>
    <string name="cantata_earback_auto">自动</string>
    <string name="cantata_earback_oboe">强制Oboe</string>
    <string name="cantata_earback_opensl">强制OpenSL</string>
    <string name="cantata_earback_opensl_tips">切换后将强制使用OpenSL模式，\n确认？</string>
    <string name="cantata_earback_oboe_tips">切换后将强制使用Oboe模式，\n确认？</string>
    <string name="cantata_earback_tips1">开启耳返可实时听到自己的声音，唱歌的时候及时调整</string>
    <string name="cantata_earback_tips2">因为延时和体验问题，在耳返里听到的声音是没有音效的（包括虚拟声卡、场景塑造（KTV、演唱会））</string>
    <string name="cantata_earback_no_micphone">使用耳返必须插入耳机，当前未检测到耳机</string>
    <string name="cantata_earback_delay">耳返延时</string>
    <string name="cantata_earback_delay_test">请对着耳麦说话，测试实时耳返延时</string>
    <string name="cantata_earback_close_tip">耳返已关闭，请插入耳机重新开启</string>
    <string name="cantata_user_online">%s在线</string>
    <string name="cantata_singing_user">正在合唱用户(%d)</string>
    <string name="cantata_on_chorus_user">%d人合唱中</string>
    <string name="cantata_seat_index">%d号麦</string>
    <string name="cantata_round_score">本轮总分</string>
    <string name="cantata_rank">排名</string>
    <string name="cantata_player">玩家</string>
    <string name="cantata_player_score">个人得分</string>
    <string name="cantata_next_song">下一首：%s</string>
    <string name="cantata_next_countdown">下一首 %ds</string>
    <string name="cantata_score1">%d分</string>
    <string name="cantata_current_score">当前 %s 分</string>
    <string name="cantata_not_on_the_list">暂无上榜</string>
    <string name="cantata_switch_open">开启</string>
    <string name="cantata_switch_close">关闭</string>
    <string name="cantata_earback_tips">开启耳返可实时听到自己的声音，唱歌的时候及时调整</string>
    <string name="cantata_kick_off">您已被踢下麦</string>
    <string name="cantata_dissovle_room_because_no_one_ordered_songs">因长时间未点歌，您的房间已解散，请重新创建房间</string>
    <string name="cantata_start_cloud_error">云端合流服务开启失败，请重新创建房间</string>
    <string name="cantata_notice">提示</string>
    <string name="cantata_ear_back_opensl">切换后将强制使用OpenSL模式，\n确认？</string>
    <string name="cantata_ear_back_oboe">切换后将强制使用Oboe模式，\n确认？</string>
    <string name="cantata_debug_settings">开发者设置</string>
    <string name="cantata_debug_settings_scoring_difficulty">打分难度</string>
    <string name="cantata_debug_settings_scoring_compensation">打分补偿</string>
    <string name="cantata_debug_settings_private_param">私有参数</string>
    <string name="cantata_debug_settings_set">设置</string>
    <string name="cantata_debug_settings_audio_dump">音频Dump</string>
    <string name="cantata_loading_music">%1s歌曲准备中…</string>
    <string name="cantata_create_room_failed">创建房间失败，错误：%1s</string>
</resources>