<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/cantata_bg_full_blue_top_20"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/cantata_music_menu_dialog_title"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cantata_music_menu_dialog_ear"
            android:textColor="@color/def_text_grey_979" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/switchEar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:button="@drawable/cb_def_selector" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/cantata_please_use_headset"
            android:textColor="@color/def_text_grey_6c7" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cantata_music_menu_dialog_mv"
            android:textColor="@color/def_text_grey_979" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/switchMV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:button="@drawable/cb_def_selector" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:text="@string/cantata_music_menu_dialog_tone"
            android:textColor="#9BA2AB" />

        <ImageButton
            android:id="@+id/btn_tone_down_dialog_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:background="@null"
            android:contentDescription="@string/cantata_tone_down"
            android:padding="6dp"
            android:src="@drawable/ic_tone_down" />

        <io.agora.scene.widget.CustomVolumeSeekBarView
            android:id="@+id/changeToneView"
            android:layout_width="180dp"
            android:layout_height="28dp"
            android:layout_marginBottom="3dp"
            android:clickable="false"
            android:focusable="false"
            tools:text="0" />

        <ImageButton
            android:id="@+id/btn_tone_up_dialog_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/cantata_tone_up"
            android:padding="6dp"
            android:src="@drawable/ic_tone_up" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:text="@string/cantata_music_menu_dialog_vol1"
            android:textColor="#9BA2AB" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/sbVol1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="35dp"
            android:contentDescription="@string/cantata_music_menu_dialog_vol1"
            android:max="100"
            android:progress="20"
            android:progressDrawable="@drawable/bg_seekbar_progress"
            android:thumb="@mipmap/ic_seekbar_btn" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:text="@string/cantata_music_menu_dialog_vol2"
            android:textColor="#9BA2AB" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/sbVol2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:contentDescription="@string/cantata_music_menu_dialog_vol2"
            android:max="100"
            android:progress="20"
            android:progressDrawable="@drawable/bg_seekbar_progress"
            android:thumb="@mipmap/ic_seekbar_btn" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:text="@string/cantata_music_menu_dialog_remote_volume"
            android:textColor="#9BA2AB" />

        <ImageButton
            android:id="@+id/btn_remote_volume_down_dialog_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:contentDescription="@string/cantata_remote_volume_down"
            android:padding="6dp"
            android:src="@drawable/ic_tone_down" />

        <EditText
            android:id="@+id/text_remote_volume"
            style="@style/cantataBeautyInputStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="15"
            android:inputType=""
            android:textColor="#9BA2AB"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/btn_remote_volume_up_dialog_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/cantata_remote_volume_up"
            android:padding="6dp"
            android:src="@drawable/ic_tone_up" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/cantata_input_remote_volume"
            android:textColor="@color/def_text_grey_6c7" />
    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:visibility="gone">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />
    </HorizontalScrollView>

    <View
        android:layout_width="0dp"
        android:layout_height="20dp" />
</LinearLayout>