<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/cantata_bg_full_blue_top_20"
    tools:theme="@style/Theme.AppCompat">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBackIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:src="@mipmap/icon_back_white"
        app:layout_constraintBottom_toBottomOf="@id/mtBottomSheetTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/mtBottomSheetTitle"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:gravity="bottom"
        android:paddingBottom="6dp"
        android:text="@string/cantata_earback_title"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--   耳返开关 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutEarBackSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="12dp"
        app:layout_constraintTop_toBottomOf="@id/mtBottomSheetTitle">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOpenSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cantata_earback_switch"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cbSwitch"
            android:layout_width="45dp"
            android:layout_height="28dp"
            android:button="@drawable/cb_def_selector"
            android:checked="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--   耳返提示 -->
    <LinearLayout
        android:id="@+id/layoutEarBackTips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/layoutEarBackSwitch">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTips1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_ear_back_mention"
            android:drawablePadding="5dp"
            android:text="@string/cantata_earback_tips1"
            android:textAlignment="textStart"
            android:textColor="@color/white_60_percent"
            android:textSize="12sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTips2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/ic_ear_back_mention"
            android:drawablePadding="5dp"
            android:text="@string/cantata_earback_tips2"
            android:textAlignment="textStart"
            android:textColor="@color/white_60_percent"
            android:textSize="12sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTipsNoEarPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_ear_back_mention_no_earphone"
            android:drawablePadding="5dp"
            android:text="@string/cantata_earback_no_micphone"
            android:textAlignment="textStart"
            android:textColor="@color/red_e0"
            android:textSize="12sp"
            android:visibility="visible"
            tools:visibility="gone" />
    </LinearLayout>

    <!--   耳返设置 -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSetting"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:alpha="0.3"
        android:background="#08062F"
        android:gravity="center_vertical"
        android:paddingHorizontal="20dp"
        android:text="@string/cantata_earback_setting"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutEarBackTips" />

    <!--   耳返音量 -->
    <LinearLayout
        android:id="@+id/layoutEarBackVol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="14dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSetting">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvVolumeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cantata_earback_volume"
            android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/btEarBackDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:background="@null"
            android:contentDescription="@string/cantata_tone_down"
            android:padding="6dp"
            android:src="@drawable/ic_tone_down" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/sbEarBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:contentDescription="@string/cantata_earback_volume"
            android:max="100"
            android:progress="100"
            android:progressDrawable="@drawable/cantata_bg_seekbar_progress"
            android:thumb="@mipmap/ic_seekbar_btn" />

        <ImageButton
            android:id="@+id/btEarBackUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@null"
            android:contentDescription="@string/cantata_tone_up"
            android:padding="6dp"
            android:src="@drawable/ic_tone_up" />
    </LinearLayout>

    <!--   耳返模式 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutEarBackMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal"
        android:paddingVertical="8dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutEarBackVol">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEarBackMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cantata_earback_mode"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/rgEarBackMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/cantata_ear_back_mode_radius"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/tvModeAuto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cantata_ear_back_mode_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:text="@string/cantata_earback_auto"
                android:textColor="@drawable/cantata_ear_back_mode_status" />

            <RadioButton
                android:id="@+id/tvModeOpenSL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cantata_ear_back_mode_selector"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:text="@string/cantata_earback_opensl"
                android:textColor="@drawable/cantata_ear_back_mode_status" />

            <RadioButton
                android:id="@+id/tvModeOboe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cantata_ear_back_mode_selector"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:text="@string/cantata_earback_oboe"
                android:textColor="@drawable/cantata_ear_back_mode_status" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    耳返延时    -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cvEarBackdelay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12sp"
        android:alpha="0.3"
        android:visibility="invisible"
        app:cardBackgroundColor="#08062F"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutEarBackMode"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="8dp"
            android:paddingVertical="12dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cantata_earback_delay"
                android:textColor="@color/white_60_percent"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPingInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cantata_earback_delay_test"
                android:textColor="@color/white_60_percent"
                android:textSize="11sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="105ms"
                android:textColor="#6d7291" />

            <ProgressBar
                android:id="@+id/pbPing"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="8dp"
                android:max="150"
                android:progress="105"
                android:progressDrawable="@drawable/cantata_ear_ping_progress"
                android:visibility="gone"
                tools:visibility="visible" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>